// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render as another element 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  color: var(--wp-g2-color-text-heading);
  font-size: var(--wp-g2-font-size-h-2);
  font-weight: var(--wp-g2-font-weight-heading);
  display: block;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<h3
  class="components-truncate wp-components-truncate components-text wp-components-text components-heading wp-components-heading ic-1ng8wck ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Heading"
>
  Some people are worth melting for.
</h3>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  color: var(--wp-g2-color-text-heading);
  font-size: var(--wp-g2-font-size-h-3);
  font-weight: var(--wp-g2-font-weight-heading);
  display: block;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-truncate wp-components-truncate components-text wp-components-text components-heading wp-components-heading ic-1ng8wck ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Heading"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render size 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  color: var(--wp-g2-color-text);
  line-height: var(--wp-g2-font-line-height-base);
  color: var(--wp-g2-color-text-heading);
  font-size: var(--wp-g2-font-size-h-2);
  font-weight: var(--wp-g2-font-weight-heading);
  display: block;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-truncate wp-components-truncate components-text wp-components-text components-heading wp-components-heading ic-1ng8wck ic-7u3orf ic-1m45iq3 ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Heading"
>
  Some people are worth melting for.
</div>
`;
